[project]
name = "rag-confluence"
version = "0.1.0"
description = "RAG-based LLM chatbot for Confluence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.124.4",
    "uvicorn==0.38.0",
    "mypy==1.19.0",
    "atlassian-python-api==4.0.7",
    "requests==2.32.4",
    "pydantic-settings==2.12.0",
    "dependency-injector==4.48.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.9",
    "types-requests==2.32.4.20250913",
]

[tool.uv]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
mypy_path = ["typings"]
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "E203",
]

